# shardai

./: .gitignore
ball-detection/: .gitignore  README.md  config.py  pyproject.toml
ball-detection/doc/: IMPLEMENTATION_PLAN.md
ball-detection/notebooks/: 01_baseline_pretrained.ipynb  02_tile_inference_eval.ipynb  03_kalman_gap_fill.ipynb
ball-detection/scripts/: compare_models.py  download_and_train.py  eval_detection.py  extract_frames.py  run_pipeline.py  setup_clips.py
ball-detection/src/: __init__.py  detection.py  frame_extractor.py  pipeline.py  tracking.py  types.py  visualization.py
ball-detection/src/mocks/: __init__.py  calibration.py  event_detector.py  player_detector.py  storage.py
ball-detection/tests/: test_detection.py  test_mocks.py  test_pipeline.py  test_tracking.py
player-detection/: .gitignore  README.md  config.py  pyproject.toml
player-detection/doc/: IMPLEMENTATION_PLAN.md
player-detection/notebooks/: 01_baseline_player_detection.ipynb  02_tracking_stability.ipynb  03_bib_identity_resolution.ipynb
player-detection/scripts/: eval_identity.py  extract_frames.py  run_pipeline.py
player-detection/src/: bib_colour.py  bib_ocr.py  detection.py  frame_extractor.py  identity.py  pipeline.py  tracking.py  types.py  visualization.py
player-detection/src/mocks/: ball_detector.py  calibration.py  ocr.py  player_detector.py  player_tracker.py  storage.py
player-detection/tests/: test_bib_colour.py  test_bib_ocr.py  test_detection.py  test_identity.py  test_mocks.py  test_pipeline.py  test_tracking.py  test_visualization.py
