[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "player-detection"
version = "0.1.0"
description = "Player + bib-number detection prototype for 5/7-a-side football match analysis"
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.0",
    "opencv-python>=4.9",
    "supervision>=0.19",
    "pytesseract>=0.3",
    "numpy>=1.26",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
]
train = [
    "roboflow>=1.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
